--- a/parte1/postit.html
+++ b/parte1/postit.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
-<meta charset="utf-8">
-<title>Esempio di lavagna con Post It</title>
-<meta name="description" content="Creazione di una lavagna con post animati al rollover">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="reset.css">
-<link rel="stylesheet" href="postit.css">
+    <meta charset="utf-8">
+    <title>Esempio di lavagna con Post It</title>
+    <meta name="description" content="Creazione di una lavagna con post animati al rollover">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="postit.css">
 </head>
 
 <body>
@@ -17,34 +18,35 @@
             <h2>TASK #1</h2>
             <p>Creare i postit</p>
         </div>
-        <div class="postit green">
+        <div class="postit green two">
             <h2>TASK #2</h2>
             <p>Colorarli</p>
         </div>
-        <div class="postit purple">
+        <div class="postit purple three">
             <h2>TASK #3</h2>
             <p>Affiancarli</p>
         </div>
-        <div class="postit green">
+        <div class="postit green four">
             <h2>TASK #4</h2>
             <p>Spaziarli</p>
         </div>
-        <div class="postit yellow">
+        <div class="postit yellow five">
             <h2>TASK #5</h2>
             <p>Ombreggiarli</p>
         </div>
-        <div class="postit purple">
+        <div class="postit purple six">
             <h2>TASK #6</h2>
             <p>Ruotarli</p>
         </div>
-        <div class="postit yellow">
+        <div class="postit yellow seven">
             <h2>TASK #7</h2>
             <p>Animarli</p>
         </div>
-        <div class="postit green">
+        <div class="postit green eight">
             <h2>TASK #8</h2>
             <p>Tesatarli</p>
         </div>
     </main>
 </body>
+
 </html>
